# fastapi-rfc9457

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  review.md
.github/workflows/: ci.yaml  publish.yaml
docs/superpowers/plans/: 2026-06-18-fastapi-rfc9457.md
docs/superpowers/specs/: 2026-06-18-fastapi-rfc9457-design.html
example/: README.md  __init__.py  client.py  main.py
src/fastapi_rfc9457/: __init__.py  builtins.py  client.py  docs.py  handlers.py  integration.py  models.py  openapi.py  problem.py  uris.py
tests/: test_builtins.py  test_client.py  test_docs.py  test_example.py  test_example_client.py  test_extension_fields_pep563.py  test_handlers.py  test_integration.py  test_lifespan.py  test_models.py  test_openapi.py  test_packaging_metadata.py  test_problem.py  test_public_api.py  test_static_typing.py  test_type_uri_resolution.py  test_yield_dependency.py
tests/static/: expected_errors.py  valid_usage.py
